--- a/style.css
+++ b/style.css
@@ -246,6 +246,50 @@ aside{
   }
 }
 
+@media (min-width: 480px) {
+    h1{
+        font-size: 1.5em;
+    }
+
+    main p, aside p{
+        font-size: 0.8em;
+    }
+
+    .containerProducts{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
+    }
+
+    .product{
+    height: 480px;
+    width: 140px;
+    grid-template-rows: 160px 220px 40px 40px;
+    }
+
+    main h2, main h3, aside h3{
+        font-size: 1em;
+    }
+
+    .product .btn{
+        font-size: 0.6em;
+    }
+
+    aside{
+    background-color: var(--higher);
+    grid-area: aside;
+    width: 150px;
+    }
+
+    aside img{
+      width: 120px;
+    }
+
+    aside figcaption{
+        font-size: 1.6em;
+    }
+}
+
 
 
 
